Added info and education

--- a/_config.yml
+++ b/_config.yml
@@ -3,36 +3,49 @@ repository: Git repository where your resume will be hosted, only required if yo
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-name: Your Name
-title: Your job title
-email: Your email (optional)
-phone: Your phone number (optional)
-website: Your website (eg. https://google.com)(optional)
+name: Mradul Pandey
+title: SDE 2 at Tesco
+email: pandeymradul@gmail.com
+phone: +91 7503331965
+website: https://www.linkedin.com/in/pandeymradul/
 
 # Social links
-twitter_username: jekyllrb
-github_username:  jekyll
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
+#twitter_username: jekyllrb
+github_username: jinternals
+#dribbble_username: jekyll
+facebook_username: pandeymradul
+#flickr_username: jekyll
+#instagram_username: jekyll
+linkedin_username: pandeymradul
+#xing_username: jekyll
+#pinterest_username: jekyll
+#youtube_username: jekyll
+#googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  I am a professional full-stack java/microservice developer and has been working in the IT industry for 8+ years. Capable of managing small to mid-size teams, different products. Experience in different software development frameworks and life-cycles with considerable experience in developing methodologies and frameworks.
 
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - Lists
-    - Tables
-    - Links
-    - Images
+  Work Models:
+    - AGILE,
+    - SCRUM,
+    - RAD
+
+  Key Skill Sets:
+    - Java, JEE, Spring Boot, Spring Cloud, Spring Security, Spring MVC
+    - Apache Camel, Spring Integration
+    - Axon Framework (CQRS, Event Driven Architecture)
+    - Docker, Kubernetes
+    - Angular, Javascript
+    - Hibernate, JPA, Spring Data
+    - IntelliJ, Eclipse, STS
+    - JBOSS, Tomcat, Glassfish
+    - MySQL, Oracle, Couchbase
+    - ActiveMQ, RabbitMQ, Kafka
+    - Threads & Concurrency
+    - Database Design, OOAD, UML, Sequence Diagram (PlatUML)
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
