--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,20 @@
+## Education Template
+#- layout: left
+#  name: Institution name
+#  dates: Date Range (eg. 2016 - 2019)
+#  qualification: Qualifications (eg. BA Performing Arts)
+#  quote: >
+#    Short institution or course description (optional)
+#  description: | # this will include new lines to allow paragraphs
+#    Description of qualification
+
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
-  quote: >
-    Short institution or course description (optional)
-  description: | # this will include new lines to allow paragraphs
-    Description of qualification
+  name: Gautam Buddha University
+  dates: 2008 - 2011
+  qualification: Master of Computer Applications
+
+- layout: left
+  name: Sikkim Manipal University - DE
+  dates: 2005 - 2008
+  qualification: B.S.C-AIT
