--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -16,7 +16,7 @@
     Worked as a lead technical engineer in Loan Studio team. Loan Studio is based on Event Driven Microservice Architecture. Loan Studio is a web-based portal for structuring loan deals for big corporate clients.
 
      Technology:
-      - Spring Boot, Spring Data JPA (Hibernate), Spring Cloud, Spring Batch, Oracle, Docker and
+      - Spring Boot, Spring Data JPA (Hibernate), Spring Cloud, Spring Batch, Oracle Database, Docker and
       JavaScript/Angular, Hashicorp vault
 
      Responsibility:
@@ -33,7 +33,7 @@
 
       Technology:
 
-      - Spring Boot, Spring Data JPA (Hibernate), Spring Cloud, Spring Batch, Oracle, Axon, Docker and
+      - Spring Boot, Spring Data JPA (Hibernate), Spring Cloud, Spring Batch, Oracle Database, Axon, Docker and
         JavaScript/Angular
 
       Responsibility:
