--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ linkedin_username: pandeymradul
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  I am a professional full-stack java/microservice developer and has been working in the IT industry for 8+ years. Capable of managing small to mid-size teams, different products. Experience in different software development frameworks and life-cycles with considerable experience in developing methodologies and frameworks.
+  I am a professional full-stack java/microservice developer and have been working in the IT industry for 8+ years. Capable of managing small to mid-size teams, different products. Experience in different software development frameworks and life-cycles with considerable experience in developing methodologies and frameworks.
 
   Work Models:
     - AGILE,
